# ualberta-roadmap

./: .dockerignore  .eslintrc.json  .gitignore  API_TESTING_GUIDE.md  DATABASE_SETUP.md  README.md  SERVICES_IMPLEMENTATION_SUMMARY.md  course-data.json  degree-requirements.json  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/api/: .env.example  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  ROADMAP_SERVICE_IMPLEMENTATION.md  SERVICES_README.md  TEST_FIX_SUMMARY.md  add_math_stats_courses.py  main.py  pyproject.toml  run_tests.sh  test_prereq_manual.py
apps/api/app/: __init__.py  db.py  db_types.py
apps/api/app/api/routes/: __init__.py
apps/api/app/core/: __init__.py  config.py  exceptions.py
apps/api/app/models/: __init__.py  course.py  program.py  roadmap.py  student.py  user.py
apps/api/app/routers/: __init__.py  courses.py  programs.py  roadmap.py
apps/api/app/schemas/: __init__.py  courses.py  programs.py  roadmap.py  services.py
apps/api/app/services/: __init__.py  prerequisite_service.py  requirement_service.py  roadmap_service.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/services/: test_prerequisite_service.py  test_requirement_service.py  test_roadmap_service.py
apps/web/: .env.example  Dockerfile  next.config.js  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/roadmap/: page.tsx
apps/web/components/: CourseCard.tsx  PrereqTree.tsx  WarningsPanel.tsx
